--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,4 +1,4 @@
-name: Lint Go Code
+name: Go Github CI
 
 on:
   push:
@@ -6,11 +6,8 @@ on:
       - master
 
 jobs:
-  lint:
-    runs-on: ubuntu-18.04
+  Hello:
+  runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          stable: 'false'
-          go-version: '1.14.1
+    - name: Hello World!
+    run: echo "Hello World"
